--- a/ona_theme/scss/_styles.scss
+++ b/ona_theme/scss/_styles.scss
@@ -303,7 +303,7 @@ input[type="submit"]:hover, .slide-show__read-more-link:hover,
   float:none !important;
 }
 img.media-element {
-  border-colour: $lightGrey;  // set the colour incase a border is set in the WYSIWYG editor
+  border-color: $lightGrey;  // set the colour incase a border is set in the WYSIWYG editor
 }
 
 // Not Front page specific rules
